--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -28,24 +28,21 @@ html, body {
 
 <div 
  style="opacity:1;"
- data-movieurl="/static/pic/opening.mp4" 
- data-baseurl=""  data-picurl="/static/pic" id="RomNavi3" style="">
+ data-baseurl=""  data-picurl="/static/pic" id="RomNavi3">
  <div id="rmnavi" class="navi">
-
  <div class="naviwrap">
- <div id="batsu2" class="rmnavi" >
+ <div class="rmnavi" >
 <a href="index.html" style="opacity:1;" data-linkurl="index.html" data-titlename="案内">案内</a>
 <a href="loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
  <div id="rmnavi2" class="rmnavi2" style="width:100vw;height:100px;background-color:rgba(211,211,211,0.4);color:white;text-align:center;">
  </div>
+
  <script>
 let lastScrollTop = 0;
-
 const rmnavi2 = document.getElementById('rmnavi2');
 const originalHeight = rmnavi2.offsetHeight;
-
 window.addEventListener('scroll', () => {
   const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
 
@@ -70,6 +67,7 @@ window.addEventListener('scroll', () => {
  </div>
 </div>
 
+<div id="basefix"></div>
 
 {% if host != "skyopener2.shop" %}
 <div class="rmdmin"></div>
