--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -30,7 +30,7 @@ window.addEventListener('scroll', function() {
  <a class="next" href="/loglist.html"><span  class="StrEnphOpa readmore" >read more...</span></a>
 
 
-<div class="rmset"
+<div class="rmset sp"
   onclick="
   const wrapper = document.getElementById('rmwrapper');
   var newScrollPosition = wrapper.scrollLeft + 150;
@@ -38,8 +38,38 @@ window.addEventListener('scroll', function() {
     behavior: 'smooth',
     left: newScrollPosition,
   });
-"
- style="background-image:url('/static/pic/juwel.jpg')"></div>
+"></div>
+<div class="rmset pc"
+     style="
+color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
+>
+<div style="color:red;width:100%;height:300px;background-color:white">
+
+<div class="web-design" style="width: 100%; height: 100%; position: relative; background-color: #F3F4F6;">
+  <div class="left-section" style="width: 45%; height: 100%; background-color: #D0D8E1; position: absolute; top: 0; left: 0; border-radius: 12px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);"></div>
+
+  <div class="center-section" style="width: 45%; height: 100%; background-color: #FFFFFF; position: absolute; top: 0; left: 55%; border-radius: 12px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);"></div>
+
+  <div class="right-section" style="width: 10%; height: 100%; background-color: #E1E8ED; position: absolute; top: 0; left: 90%; border-radius: 12px;"></div>
+
+  <div class="top-banner" style="width: 100%; height: 50px; background-color: #8C9BA8; position: absolute; top: 0; left: 0; border-top-left-radius: 12px; border-top-right-radius: 12px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);"></div>
+
+  <div class="bottom-banner" style="width: 100%; height: 50px; background-color: #8C9BA8; position: absolute; bottom: 0; left: 0; border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);"></div>
+</div>
+</div>
+<span style="white-space:normal;display:block;overflow-wrap:break-word;word-wrap:break-word;
+             color:rgba(100,100,100,1);
+  text-decoration: underline;text-align:left;
+  text-underline-position: under; 
+  text-decoration-color:black;    
+  line-height: 1.8em;  
+  text-decoration-style: solid; 
+ ">
+ どんなに複雑な機能でも、ユーザーが迷わないUI/UXを大事にしています。シンプルなデザインから美しいコードが生まれると信じて、余計なものは省いて、ページを速く、軽く、使いやすくすることに喜びを感じています。機能とデザインの融合が活動の指針です。</span>
+
+
+</div>
+
 <div id="rmwrapper"
  class="wrapper">
  {% for p in posted %}
