--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,14 @@
 .romyajirushi {
   box-shadow: none !important; }
 
+@media screen and (min-width: 600px) {
+  .sp {
+    display: none !important; } }
+
+@media screen and (max-width: 600px) {
+  .pc {
+    display: none !important; } }
+
 #parallax {
   position: relative;
   background-position: center;
@@ -60,6 +68,7 @@
     box-sizing: border-box; }
     @media screen and (max-width: 600px) {
       #rom_urllist2 > div.rmset {
+        height: 700px;
         width: 8%;
         background-color: rgba(225, 220, 220, 0.8);
         background-image: none !important;
@@ -79,11 +88,11 @@
           position: absolute; } }
     @media screen and (min-width: 600px) {
       #rom_urllist2 > div.rmset {
-        width: 30%;
-        background-color: rgba(100, 100, 100, 0.2);
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        background-position: center; } }
+        width: 310px !important;
+        margin-right: 0.5vw;
+        background-color: #fbf8f1;
+        background-image: radial-gradient(rgba(0, 0, 0, 0.1) 1px, transparent 1px), radial-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px);
+        background-size: 3px 3px, 6px 6px; } }
   #rom_urllist2 a {
     font-size: 1.5em;
     display: inline-block;
@@ -109,7 +118,6 @@
     grid-gap: 25px; }
     @media screen and (min-width: 600px) {
       #rom_urllist2 div.wrapper {
-        margin-left: 3em;
         justify-content: start;
         align-content: start; } }
     @media screen and (max-width: 600px) {
