--- a/static/css/home.css
+++ b/static/css/home.css
@@ -32,6 +32,7 @@
     mix-blend-mode: normal; } }
 
 #rom_urllist2 {
+  max-height: 800px;
   background-color: rgba(0, 0, 0, 0.7);
   font-family: DotGothic16;
   position: relative;
@@ -50,13 +51,13 @@
       border-bottom: white solid 5px;
       border-top: white solid 5px;
       padding-top: 2vh;
-      padding-bottom: 20vh; } }
+      padding-bottom: 200px; } }
   @media screen and (min-width: 600px) {
     #rom_urllist2 {
       padding-left: 7vw;
       padding-right: 7vw;
       padding-top: 10vh;
-      padding-bottom: 10vh; } }
+      padding-bottom: 100px; } }
   #rom_urllist2 > .next {
     position: absolute;
     right: 0em;
