--- a/static/css/home.css
+++ b/static/css/home.css
@@ -120,7 +120,10 @@
     @media screen and (min-width: 600px) {
       #rom_urllist2 div.wrapper {
         justify-content: start;
-        align-content: start; } }
+        align-content: start;
+        width: 60vw;
+        overflow-x: scroll;
+        overflow-y: hidden; } }
     @media screen and (max-width: 600px) {
       #rom_urllist2 div.wrapper {
         margin-left: 0.25em;
