--- a/static/css/urllist.css
+++ b/static/css/urllist.css
@@ -10,6 +10,13 @@
   background-image: linear-gradient(150deg, rgba(255, 255, 255, 0.5) 60%, transparent 0);
   pointer-events: none; }
 
+.rmlinks {
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.1s ease; }
+  .rmlinks:hover {
+    transform: translateX(-10px); }
+
 div.rm_realurllist {
   opacity: 1 !important;
   font-family: 'DotGothic16';
@@ -19,8 +26,10 @@ div.rm_realurllist {
   margin-bottom: 100px;
   position: relative; }
   div.rm_realurllist .wrap_urlist {
-    border-top: 1.5em grey solid;
-    border-bottom: 1.5em grey solid;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-image: linear-gradient(to right, rgba(50, 50, 50, 0.9), grey, white, grey, white, grey, rgba(50, 50, 50, 0.9));
+    border-image-slice: 1;
     display: inline-block;
     max-width: 97vw; }
     @media screen and (min-width: 600px) {
@@ -29,14 +38,13 @@ div.rm_realurllist {
   div.rm_realurllist .rm_postblock {
     transition: filter 0.3s ease;
     box-sizing: border-box;
-    border: solid 1px black;
     position: relative;
     max-width: 97vw; }
     div.rm_realurllist .rm_postblock:hover {
       filter: brightness(0.8); }
     @media screen and (min-width: 600px) {
       div.rm_realurllist .rm_postblock {
-        height: 300px; } }
+        height: 200px; } }
     @media screen and (max-width: 600px) {
       div.rm_realurllist .rm_postblock {
         height: 20vh; } }
@@ -65,16 +73,13 @@ div.rm_realurllist {
   div.rm_realurllist img {
     height: 100% !important;
     aspect-ratio: 1 / 1;
+    object-fit: fill;
+    margin: 0;
     display: inline-block !important;
     background-color: rgba(0, 0, 0, 0);
     vertical-align: top; }
-    @media screen and (max-width: 1000px) {
-      div.rm_realurllist img {
-        margin-right: 0.1em; } }
-    @media screen and (min-width: 1000px) {
-      div.rm_realurllist img {
-        margin-right: 1em; } }
   div.rm_realurllist .text-wrap {
+    background-color: rgba(235, 230, 230, 0.7);
     position: relative;
     flex-grow: 1;
     overflow: hidden;
@@ -84,14 +89,20 @@ div.rm_realurllist {
         padding: 0.1em; } }
     @media screen and (max-width: 600px) {
       div.rm_realurllist .text-wrap {
-        padding: 0.0em; } }
+        padding: 0.5em 0.0em; } }
     div.rm_realurllist .text-wrap .title {
       box-sizing: border-box;
       text-align: left;
       display: inline-block; }
+      div.rm_realurllist .text-wrap .title > span {
+        font-weight: 600;
+        max-height: 2.4em;
+        overflow: hidden;
+        line-height: 1.2;
+        display: inline-block; }
       @media screen and (min-width: 600px) {
         div.rm_realurllist .text-wrap .title {
-          font-size: 1em;
+          font-size: 0.7em;
           padding-top: 0.6em;
           padding-left: 0.6em; } }
       @media screen and (max-width: 600px) {
@@ -115,7 +126,6 @@ div.rm_realurllist {
           font-size: 0.05em;
           padding-right: 0.1em; } }
   div.rm_realurllist div.rm_postblock {
-    background-color: rgba(235, 230, 230, 0.7);
     display: inline-block;
     text-align: center;
     padding: 0.0em;
