--- a/basecom/templates/basecom/contact.html
+++ b/basecom/templates/basecom/contact.html
@@ -19,7 +19,7 @@
     <label  class="StrEnphOpa" for="contact">お問い合わせ: </label>
     <textarea  data-display="本文" class="rm_inputpost"  name="contact" id="contact"  ></textarea>
 
-    <input  type="submit" id="sbm" value="送信" />
+    <input  type="submit" id="sbm" value="お問い合わせ" />
 </form>
 </div>
 <link rel="stylesheet" href="{% static 'css/contact.css' %}?p={{fileparam}}">
