--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -155,7 +155,7 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 
 
 
-<div class="land2" style="background-color:rgba(2,2,2,0.4);width:100vw;min-height:100vh">
+<div class="land2" style="background-color:rgba(2,2,2,0.4);min-height:100vh">
 <section class="hero1" style="min-height:100vh">
     <h1 class="element fadeelem"
 data-threshold="0.8"
