--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ページが見つかりません</title>
+    <title>メンテナンス中</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,12 +20,13 @@
         }
 
         h1 {
-            font-size: 36px;
+            font-size: 48px;
             color: #e74c3c;
+            white-space:nowrap;
         }
 
         p {
-            font-size: 24px;
+            font-size: 20px;
             margin-top: 20px;
         }
 
@@ -56,9 +57,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>404 - ページが見つかりません</h1>
-        <p>お探しのページは見つかりませんでした。URLを確認するか、下のボタンから他のページに移動してください。</p>
-        <a href="/" class="button">ホームに戻る</a>
+        <h1>サイトはメンテナンス中です</h1>
+        <p>ただいまサイトのメンテナンスを行っております。しばらくしてから再度アクセスしてください。</p>
     </div>
 </body>
 </html>
