--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -68,6 +68,7 @@ window.addEventListener('scroll', () => {
 </div>
 
 <div id="basefix"></div>
+{% include 'basecom/parts/back2home.html'%}
 
 {% if host == "127.0.0.1:8000" %}
 <div class="rmdmin"></div>
