--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -36,6 +36,12 @@ html, body {
 <a href="loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
 <a href="profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
 <a href="contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
+<style>
+.rmnavi2 {
+  text-align: center;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+}
+</style>
  <div id="rmnavi2" class="rmnavi2" style="width:100vw;height:100px;background-color:rgba(211,211,211,0.4);color:white;text-align:center;">
  </div>
 
@@ -115,8 +121,30 @@ if (rmnavi && rmdmin) {
 
 {% block content %}
 {% endblock %}
+<style>
+footer{
+border-radius: 3px 3px 0 0;
+linear-gradient(to top, #222, #444);
+border-top: 1px solid #555;
+box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.5);
+transform: translateY(-5px);
+}
+
+
+footer a {
+  text-decoration: none;
+  color: #c8c8c8;
+  border-radius: 5px;
+  display: inline-block;
+  transition: opacity 0.2s ease-out;
+}
+
+footer a:hover {
+  opacity: 0.7;
+}
+</style>
 <footer style="opacity:0;" id="rm_footer2" data-sitestring="rom">
- <div onclick="window.location='/'">Copyright © rom 2024-2024 All Rights Reserved.</a>
+ <a href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
 
 
      <ul id="rm_linklist">
