--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -27,6 +27,17 @@ window.addEventListener('scroll', function() {
 <div id="rom_urllist2" class="parallax" style="display:none;"  data-baseurl="" 
  data-linksurl="/loglist.html"
  data-picurl="/static/pic">
+
+ <div id="hoverarea" style="
+width:80px;height:80%;
+background-color:rgba(0,0,0,0.1);
+right:0;top:0;
+position:absolute;
+z-index:100;
+
+  "></div>
+
+
  <a class="next" href="/loglist.html"><span  class="StrEnphOpa readmore" >read more...</span></a>
 
 
@@ -67,6 +78,7 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 >
 <div style="color:red;width:100%;height:300px;background-color:white">
 
+
 <div class="web-design" style="width: 100%; height: 100%; position: relative; background-color: #F3F4F6;">
   <div class="left-section" style="width: 45%; height: 100%; background-color: #D0D8E1; position: absolute; top: 0; left: 0; border-radius: 12px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);"></div>
 
@@ -81,6 +93,7 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 </div>
 <span style="white-space:normal;display:block;overflow-wrap:break-word;word-wrap:break-word;
              color:rgba(100,100,100,1);
+             padding:0.15em;
   text-decoration: underline;text-align:left;
   text-underline-position: under; 
   text-decoration-color:black;    
@@ -153,6 +166,21 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 </div>
 </div>
 
+<script>
+ const A = document.getElementById("hoverarea");
+    const B = document.getElementById("rmwrapper");
+    let scrollInterval;
+
+    A.addEventListener("mouseenter", () => {
+        scrollInterval = setInterval(() => {
+            B.scrollLeft += 5;
+        }, 50);
+    });
+
+    A.addEventListener("mouseleave", () => {
+        clearInterval(scrollInterval);
+    });
+</script>
 
 
 <div class="land2" style="background-color:rgba(2,2,2,0.4);min-height:100vh">
