--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -32,10 +32,10 @@ html, body {
  <div id="rmnavi" class="navi">
  <div class="naviwrap">
  <div class="rmnavi" >
-<a href="index.html" style="opacity:1;" data-linkurl="index.html" data-titlename="案内">案内</a>
-<a href="loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
-<a href="profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
-<a href="contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
+<a href="/index.html" style="opacity:1;" data-linkurl="index.html" data-titlename="案内">案内</a>
+<a href="/loglist.html" style="opacity:1;" data-linkurl="loglist.html"  data-titlename="活動紹介">活動紹介</a>
+<a href="/profile.html" style="opacity:1;" data-linkurl="profile.html"  data-titlename="プロフィール">プロフィール</a>
+<a href="/contact.html" style="opacity:1;" data-linkurl="contact.html"  data-titlename="Contact">Contact</a>
 <style>
 .rmnavi2 {
   text-align: center;
