--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -219,6 +219,8 @@ style="transition: opacity 0.8s 0.6s ease-out, transform 0.8s 0.6s ease-out;">
 </style>
 
   </section>
+
+<section class="hero3" style="min-height:100vh">
 <div class="container">
  <h1 class="section-title" style="white-space:nowrap;color:white;">Webサイト制作<br>の流れ</h1>
         <div class="card-grid">
@@ -266,6 +268,7 @@ style="transition: opacity 0.8s 0.9s ease-out, transform 0.8s 0.9s ease-out;"
             </div>
         </div>
     </div>
+    </section>
 <style>
         .container {
             max-width: 1200px;
@@ -290,6 +293,10 @@ style="transition: opacity 0.8s 0.9s ease-out, transform 0.8s 0.9s ease-out;"
             text-align: center;
         }
         .card:hover {
+            transform: translateY(-5px);
+            transition: transform 0.3s ease !important;
+        }
+        .box_rom:hover {
             transform: translateY(-5px);
             transition: transform 0.3s ease !important;
         }
