--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -150,7 +150,7 @@ footer a:hover {
 }
 </style>
 <footer style="opacity:0;" id="rm_footer2" data-sitestring="rom">
- <a href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
+ <a class="StrEnphOpa" data-baseduration="15" data-basedelay="5" href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
 
 
      <ul id="rm_linklist">
