--- a/basecom/templates/basecom/contact.html
+++ b/basecom/templates/basecom/contact.html
@@ -10,7 +10,7 @@
 <form  method="post" style="text-align:left;">
     {% csrf_token %}
     <div 
-      style="padding:0px 20px;display:inline-block;font-size:0.8em;color:#c55;width:100%;">
+      style="box-sizing:border-box;padding:0px 20px;display:inline-block;font-size:0.8em;color:#c55;width:100%;">
      フォームを入力すると、弊社にメールが行きます。<br/>(日本語でお願いします)</div>
 
     <label class="StrEnphOpa" for="name">名前: </label>
