--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -43,7 +43,7 @@ html, body {
   text-align: center;
   background-color:grey !important;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-  transition: opacity 1s ease-out,height 0.3s ease;
+  transition: opacity 1s ease-out 2s,height 0.3s ease;
 }
 .rmnavi2:hover{
  opacity: 0.3;
