--- a/static/css/land2.css
+++ b/static/css/land2.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Noto+Sans+JP:wght@100..900&display=swap");
 .land2 {
   font-family: "Hina Mincho", serif;
@@ -8,18 +9,28 @@
     margin-bottom: 20px; }
   .land2 .hero1 .cta-button {
     display: inline-block;
-    padding: 12px 30px;
-    background-color: #3c4ce7;
+    padding: 2px 10px;
+    background-color: rgba(220, 220, 220, 0);
     color: white;
-    font-size: 18px;
+    font-size: 36px;
     text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease,filter 0.3s ease, transform 0.3s ease; }
+    border-radius: 1px !important;
+    position: relative;
+    transition: filter 0.3s ease; }
+    .land2 .hero1 .cta-button::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      /* 下線の位置調整 */
+      left: 0%;
+      width: 0%;
+      height: 2px;
+      background-color: white;
+      transition: width 0.2s ease-out; }
   .land2 .hero1 .cta-button:hover {
-    background-color: #2b39c0;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(43, 57, 192, 0.8);
-    filter: brightness(0.8); }
+    filter: brightness(0.6); }
+    .land2 .hero1 .cta-button:hover::after {
+      width: 100%; }
   @media screen and (min-width: 768px) {
     .land2 .hero1 > h1 {
       margin-top: 150px !important;
@@ -134,7 +145,6 @@
   margin-top: 20px;
   padding: 15px 30px;
   font-size: 1.2em;
-  background: #007bff;
   color: #fff;
   text-decoration: none;
   border-radius: 5px; }
